tests/ui/coherence/coherence-overlap-downstream_conflict.stderr
error[E0119]: conflicting implementations of trait `Foo<()>` for type `i32`
  --> $DIR/coherence-overlap-downstream_conflict.rs:7:1
   |
LL | impl<X, T> Foo<X> for T where T: Bar<X> {}
   | --------------------------------------- first implementation here
...
LL | impl<X> Foo<X> for i32 {}
   | ^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `i32`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
